syntax = "proto3";

package grpcserver;

option java_multiple_files = true;
option java_package = "com.furkanakkurt.grpcserver";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message AgeRequest {
  int32 birthYear = 1;
}

message AgeResponse {
  int32 age = 1;
}

service HelloWorldService {
  rpc greet(HelloRequest) returns (HelloResponse) {}
  rpc streamGreet(HelloRequest) returns (stream HelloResponse) {}
}

service AgeService {
  rpc getAge(AgeRequest) returns (AgeResponse) {}
}